# lab

./: .gitignore  CMakeLists.txt  test.sh
dump/: CMakeLists.txt  dump.cpp
filter/: CMakeLists.txt  filter.cpp  url_code.cpp
map/: CMakeLists.txt  map.cpp
query/: alt-name.txt  doc.list  query.txt  simple-alt-name.txt
query/simple/: doc-list.txt  query.txt
script/: aws.init.sh.txt
select/: CMakeLists.txt  select.cpp
test/: dump.sh  select.sh
wrapper/: filter.py  gen-dir-list.py  run-filter.py
wrapper/src/: filter-delta.py  re-run-filter.py  run-filter.py  run-map.py
